force-app/main/default/objects/Student_Fee_c__x/Student_Fee_c__x.object-meta.xml
<CustomObject>
    <externalDataSource>Zak</externalDataSource>
    <externalName>Student_Fee__c</externalName>
    <externalRepository>Name</externalRepository>
    <label>Student Fee</label>
    <pluralLabel>Student Fees</pluralLabel>
</CustomObject>