force-app/main/default/objects/Student_Fee_c__x/fields/Amount_In_Words_c__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_Words_c__c</fullName>
    <externalDeveloperName>Amount_In_Words__c</externalDeveloperName>
    <label>Amount In Words</label>
    <length>80</length>
    <type>Text</type>
</CustomField>