force-app/main/default/objects/Student_Fee_c__x/fields/city_c__c.field-meta.xml
<CustomField>
    <fullName>city_c__c</fullName>
    <externalDeveloperName>city__c</externalDeveloperName>
    <label>city</label>
    <length>18</length>
    <type>Text</type>
</CustomField>