force-app/main/default/objects/Student_Fee_c__x/fields/country_c__c.field-meta.xml
<CustomField>
    <fullName>country_c__c</fullName>
    <externalDeveloperName>country__c</externalDeveloperName>
    <label>country</label>
    <length>18</length>
    <type>Text</type>
</CustomField>