force-app/main/default/objects/Student_Fee_c__x/fields/fee_c__c.field-meta.xml
<CustomField>
    <fullName>fee_c__c</fullName>
    <externalDeveloperName>fee__c</externalDeveloperName>
    <label>fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>