force-app/main/default/objects/Student_Fee_c__x/fields/phone_c__c.field-meta.xml
<CustomField>
    <fullName>phone_c__c</fullName>
    <externalDeveloperName>phone__c</externalDeveloperName>
    <label>phone</label>
    <type>Phone</type>
</CustomField>