force-app/main/default/objects/Student_Fee_c__x/fields/Project1_c__c.field-meta.xml
<CustomField>
    <fullName>Project1_c__c</fullName>
    <externalDeveloperName>Project1__c</externalDeveloperName>
    <label>Project1</label>
    <length>18</length>
    <type>Text</type>
</CustomField>