force-app/main/default/objects/Student_Fee_c__x/fields/Teacher3_c__c.field-meta.xml
<CustomField>
    <fullName>Teacher3_c__c</fullName>
    <externalDeveloperName>Teacher3__c</externalDeveloperName>
    <label>Teacher3</label>
    <length>18</length>
    <type>Text</type>
</CustomField>